--- a/ChampionMains.Pyrobot/Views/_newMaster.cshtml
+++ b/ChampionMains.Pyrobot/Views/_newMaster.cshtml
@@ -52,9 +52,9 @@
     <div class="main-layout mdl-layout mdl-js-layout">
         <div id="background-canvas">
             <div class="left" :style="{ 'background-image': 'url(https://cdn.communitydragon.org/latest/champion/' +
-                 championId + '/splash-art/centered/skin/' + skinId + ')' }"></div>
+                 backgroundState.championId + '/splash-art/centered/skin/' + backgroundState.skinId + ')' }"></div>
             <div class="right" :style="{ 'background-image': 'url(https://cdn.communitydragon.org/latest/champion/' +
-                 championId + '/splash-art/centered/skin/' + skinId + ')' }"></div>
+                 backgroundState.championId + '/splash-art/centered/skin/' + backgroundState.skinId + ')' }"></div>
         </div>
         <header class="mdl-layout__header mdl-layout__header--scroll mdl-layout__header--transparent">
             <div class="mdl-layout__header-row">
