adjust heading spacer

--- a/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
@@ -197,7 +197,7 @@
         </div>
     </div>
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--12-col mdl-cell--hide-phone mdl-cell--hide-tablet" style="height: 10vw;"></div>
+        <div class="heading-spacer mdl-cell mdl-cell--12-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
         <div class="content mdl-shadow--2dp mdl-cell mdl-cell--6-col mdl-cell--1-offset-tablet mdl-cell--top">
             <div>
                 <h3>
