modpanel user validation

--- a/ChampionMains.Pyrobot/Views/ModPanel/Index.cshtml
+++ b/ChampionMains.Pyrobot/Views/ModPanel/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Test Page";
-    Layout = "~/Views/_newMaster.cshtml";
+//    Layout = "~/Views/_newMaster.cshtml";
 }
 
 <h2>Welcome to the future Admin Panel</h2>
